2002-11-28  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* SoapServices.cs: fix error CS3005.

2002-09-03  Dietmar Maurer  <dietmar@ximian.com>

	* RemotingServices.cs: add an unique app_id string used to generate
	unique object uris.

	* ObjRef.cs: added serialization support

2002-08-31  Dietmar Maurer  <dietmar@ximian.com>

	* ObjRef.cs: gather the channel date at creation time.

2002-08-20  Dietmar Maurer  <dietmar@ximian.com>

	* RemotingServices.cs: Connect impl. 

2002-08-02  Duncan Mak  <duncan@ximian.com>

	* ActivatedClientTypeEntry.cs:
	* ActivatedServiceTypeEntry.cs:
	* WellKnownClientTypeEntry.cs:
	* WellKnownServiceTypeEntry.cs: Various visibility fixes.

2002-07-31  Duncan Mak  <duncan@ximian.com>

	* TypeEntry.cs:
	* ActivatedClientTypeEntry.cs:
	* ActivatedServiceTypeEntry.cs:
	* WellKnownClientTypeEntry.cs:
	* WellKnownServiceTypeEntry.cs: Added all the classes derived from TypeEntry.

	* RemotingException.cs: 
	* RemotingTimeoutException.cs: 
	* ServerException.cs: Added missing exceptions.

	* IChannelInfo.cs: 
	* IEnvoyInfo.cs: 
	* IRemotingTypeInfo.cs: Added missing interfaces.

2002-07-24  Duncan Mak  <duncan@ximian.com>

	* LeaseState.cs: Moved to System.Runtime.Remoting.Lifetime.

	* SoapMethodOption.cs: 
	* SoapOption.cs: Removed and merged into System.Runtime.Remoting.Metadata.SoapOption.

2002-07-09  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* IObjectHandle.cs: New file.
	* ObjectHandle.cs: implemented constructor and Unwrap.

2002-01-05  Ravi Pratap  <ravi@ximian.com>

	* ObjRef.cs : Strew the MonoTODO attribute.

2001-09-02  Miguel de Icaza  <miguel@ximian.com>

	* ObjRef.cs: Include System.Runtime.Serialization
